# cloudwatch-metrics-test

./: Cargo.toml
src/: main.rs
